Issue mekurokito/powermonitor/#9: checkboxes now visible on chrome

--- a/powermonitorweb/static/powermonitorweb/mainstyle.css
+++ b/powermonitorweb/static/powermonitorweb/mainstyle.css
@@ -88,7 +88,7 @@ body
 
 .miniform label+input[type=checkbox]
 {
-    width: 0;
+    width: auto;
 }
 
 .miniform .form-right
